# rtcw

./: CMakeLists.txt  Makefile  build_mingw32  build_mingw64
cmake/: MinGWCrossCompile.cmake
main/: CMakeLists.txt
src/botai/: ai_cmd.c  ai_dmq3.c  ai_team.c
src/botlib/: be_aas_main.c  be_aas_reach.c  be_aas_route.c  be_ai_goal.c  be_ai_weap.c  l_precomp.c  l_script.c
src/cgame/: cg_draw.c  cg_drawtools.c  cg_event.c  cg_info.c  cg_main.c  cg_newDraw.c  cg_servercmds.c  cg_syscalls.c  cg_weapons.c
src/client/: cl_cgame.c  cl_cin.c  cl_main.c  cl_ui.c  snd_dma.c
src/game/: ai_cast.c  ai_cast.h  ai_cast_think.c  bg_animation.c  g_client.c  g_local.h  g_main.c  g_syscalls.c  q_shared.c  q_shared.h
src/jpeg-6/: jconfig.h  jdcoefct.c  jinclude.h  jmorecfg.h
src/qcommon/: cm_patch.c  cm_polylib.c  common.c  cvar.c  files.c  md4.c  msg.c  qcommon.h  unzip.c  vm.c  vm_local.h
src/renderer/: tr_animation.c  tr_bsp.c  tr_image.c  tr_init.c  tr_main.c  tr_model.c  tr_shade_calc.c  tr_shader.c
src/sdl/: sdl_glimp.c  sdl_input.c
src/server/: sv_bot.c  sv_client.c  sv_game.c
src/splines/: util_list.h
src/sys/: con_tty.c  sys_main.c  sys_unix.c  sys_win32.c
src/ui/: ui_main.c  ui_shared.c  ui_syscalls.c
